--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "we2-travel-app",
+  "name": "we2-youtube-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
